added clock view controller when cell clicked

--- a/Views/MainViewController/Base.lproj/ClockViewController~.storyboard
+++ b/Views/MainViewController/Base.lproj/ClockViewController~.storyboard
@@ -138,19 +138,19 @@
             <point key="canvasLocation" x="3539.130434782609" y="115.84821428571428"/>
         </scene>
         <!--Clock View Controller-->
-        <scene sceneID="Atg-TV-FWB">
+        <scene sceneID="42F-cS-vG0">
             <objects>
-                <viewController storyboardIdentifier="Clock" id="ljv-3F-WUT" customClass="ClockViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="FAs-K7-SUb">
+                <viewController id="d3m-ie-CcJ" customClass="ClockViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="61z-Y7-AZy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="xa6-uT-lTg"/>
+                        <viewLayoutGuide key="safeArea" id="6Ky-pU-f1i"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QQ9-oc-rWb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fag-SN-hKv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4296" y="111"/>
+            <point key="canvasLocation" x="4356" y="114"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZCi-l9-5Dh">
