--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -144,13 +144,38 @@
                     <view key="view" contentMode="scaleToFill" id="FAs-K7-SUb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKx-wT-q4g">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2H-YE-C1V">
+                                        <rect key="frame" x="8" y="395" width="398" height="106"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.22352941179999999" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RKx-wT-q4g" firstAttribute="top" secondItem="xa6-uT-lTg" secondAttribute="top" constant="-44" id="QAq-p2-NcK"/>
+                            <constraint firstItem="xa6-uT-lTg" firstAttribute="bottom" secondItem="RKx-wT-q4g" secondAttribute="bottom" constant="-34" id="ol9-kk-wfL"/>
+                            <constraint firstItem="xa6-uT-lTg" firstAttribute="trailing" secondItem="RKx-wT-q4g" secondAttribute="trailing" id="uZY-2K-dO6"/>
+                            <constraint firstItem="RKx-wT-q4g" firstAttribute="leading" secondItem="xa6-uT-lTg" secondAttribute="leading" id="yBR-qf-yEa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="xa6-uT-lTg"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundView" destination="RKx-wT-q4g" id="OYL-hU-MV4"/>
+                        <outlet property="timeLabel" destination="Z2H-YE-C1V" id="Xv3-ME-jrB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QQ9-oc-rWb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4296" y="111"/>
+            <point key="canvasLocation" x="4550.7246376811599" y="115.84821428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZCi-l9-5Dh">
